// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography ACT theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1xs2km9-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ACT_ET theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-uspa1m-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1csc89d-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURAGE_E4S theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1wjddl7-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;
